# personal_data_api

./: .example_env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: gunicorn.conf.py  main.py
app/config/: logger.py  settings.py
app/dto/: personal_data.py
app/routers/: __init__.py  personal_data.py
app/service/connector/: connect_redis.py
app/service/crud/: personal_data.py
