[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.1"
fastapi = "^0.114.0"
gunicorn = "^23.0.0"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
uvicorn = "^0.30.6"
setuptools = "^74.1.2"
gevent = "^24.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
